Fixed code element width on mobile.

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ main {
 
 pre {
   max-width: 50vw;
+  min-width: 800px;
   white-space: pre-wrap;
   overflow-wrap: break-word;
   font-size: smaller;
